[package]
name = "leveldb-sys"
version = "2.0.9"
authors = ["Andrew Dunham <andrew@du.nham.ca>", "Florian Gilcher <florian.gilcher@asquera.de>"]

description = "FFI bindings to LevelDB"
repository = "https://github.com/skade/leveldb-sys"
documentation = "https://docs.rs/leveldb-sys/"
license = "MIT"

[features]
snappy = []

[dependencies]
libc = "0.2.*"
ffi-opaque = "2"

[dev-dependencies]
tempfile = "3.10.1"
