[package]
name = "leveldb-sys"
version = "2.0.9"
authors = ["Andrew Dunham <andrew@du.nham.ca>", "Florian Gilcher <florian.gilcher@asquera.de>"]
rust-version = "1.81"

description = "FFI bindings to LevelDB"
repository = "https://github.com/skade/leveldb-sys"
documentation = "https://docs.rs/leveldb-sys/"
license = "MIT"

[features]
default = [ "vendor" ]
snappy = []
vendor = [ "cmake", "num_cpus" ]

[dependencies]
libc = "0.2.*"
ffi-opaque = "2"

[dev-dependencies]
tempfile = "3.10.1"

[build-dependencies]
cmake = { version = "0.1.54", optional = true }
num_cpus = { version = "1.10", optional = true }
